refactored some of my code to make fixing some bugs a little easier. fixed bug where car left would reach end of row and wrap to the row above fixed bug where car right would reach end of row and wrap to row above fixed bug where logs left would reach end of row and wrap to row above fixed bug where logs right would reach end of row and wrap to row above. some more refactoring of old code to go, still need to declare win/lose conditions before sending MVP

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ body {
 }
 
 .grid div.car-right {
-  background-color: #d82ceb;
+  background-color: #eb2c2c;
 }
 
 .grid div.logs-left {
